--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-transformer-sharp": "^1.6.16",
     "object-fit-images": "^3.2.3",
     "react-icons": "^2.2.7",
+    "react-slick": "^0.16.0",
     "shortid": "^2.2.8",
     "styled-components": "^2.4.0",
     "tachyons": "^4.9.0"
