--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "isotope-layout": "^3.0.5",
     "object-fit-images": "^3.2.3",
     "react-icons": "^2.2.7",
+    "react-reveal": "^0.7.3",
+    "react-scrollreveal": "^1.1.2",
     "react-slick": "^0.16.0",
+    "scrollreveal": "^3.3.6",
     "shortid": "^2.2.8",
     "styled-components": "^2.4.0",
     "tachyons": "^4.9.0"
