--- a/package.json
+++ b/package.json
@@ -8,32 +8,33 @@
     "gatsby-cli": "^1.1.28",
     "gatsby-image": "^1.0.31",
     "gatsby-link": "^1.6.32",
+    "gatsby-plugin-netlify": "^1.0.13",
+    "gatsby-plugin-preact": "^1.0.14",
     "gatsby-plugin-purify-css": "^2.2.1",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-react-next": "^1.0.7",
     "gatsby-plugin-sharp": "^1.6.24",
-    "gatsby-plugin-styled-components": "^2.0.4",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-sharp": "^1.6.16",
     "isotope-layout": "^3.0.5",
     "object-fit-images": "^3.2.3",
+    "react-aux": "^1.1.0",
     "react-icons": "^2.2.7",
     "react-slick": "^0.16.0",
     "scrollreveal": "^3.3.6",
     "shortid": "^2.2.8",
-    "styled-components": "^2.4.0",
-    "tachyons": "^4.9.0",
     "tailwindcss": "^0.4.0"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
-    "tailwind":
-      "./node_modules/.bin/tailwind build ./src/styles/tailwind.css -c ./src/styles/tailwind.js -o ./src/styles/styles.css",
+    "tailwind": "./node_modules/.bin/tailwind build ./src/styles/tailwind.css -c ./src/styles/tailwind.js -o ./src/styles/styles.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
