--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
     "shortid": "^2.2.8",
     "tailwindcss": "^0.4.0"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
-    "tailwind": "./node_modules/.bin/tailwind build ./src/styles/tailwind.css -c ./src/styles/tailwind.js -o ./src/styles/styles.css",
+    "tailwind":
+      "./node_modules/.bin/tailwind build ./src/styles/tailwind.css -c ./src/styles/tailwind.js -o ./src/styles/styles.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "prettier": "^1.9.2"
   }
 }
