Install basic chatbot

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-preact": "^1.0.14",
     "gatsby-plugin-purify-css": "^2.2.1",
     "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-plugin-react-next": "^1.0.8",
     "gatsby-plugin-sharp": "^1.6.24",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-sharp": "^1.6.16",
@@ -20,6 +21,7 @@
     "object-fit-images": "^3.2.3",
     "react-aux": "^1.1.0",
     "react-icons": "^2.2.7",
+    "react-simple-chatbot": "^0.2.9",
     "react-slick": "^0.16.0",
     "scrollreveal": "^3.3.6",
     "shortid": "^2.2.8",
