--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-image": "^1.0.31",
     "gatsby-link": "^1.6.32",
     "gatsby-plugin-netlify": "^1.0.13",
+    "gatsby-plugin-postcss-sass": "^1.0.16",
     "gatsby-plugin-preact": "^1.0.14",
     "gatsby-plugin-purify-css": "^2.2.1",
     "gatsby-plugin-react-helmet": "^1.0.8",
@@ -21,22 +22,22 @@
     "object-fit-images": "^3.2.3",
     "react-aux": "^1.1.0",
     "react-icons": "^2.2.7",
+    "react-id-swiper": "^1.5.8",
     "react-simple-chatbot": "^0.2.9",
     "react-slick": "^0.16.0",
     "scrollreveal": "^3.3.6",
     "shortid": "^2.2.8",
     "tailwindcss": "^0.4.0"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
-    "tailwind": "./node_modules/.bin/tailwind build ./src/styles/tailwind.css -c ./src/styles/tailwind.js -o ./src/styles/styles.css && babel --plugins transform-object-assign ./src/styles/tailwind.js -o ./src/styles/tailwind-babel.js",
+    "tailwind":
+      "./node_modules/.bin/tailwind build ./src/styles/tailwind.scss -c ./src/styles/tailwind.js -o ./src/styles/styles.scss && babel --plugins transform-object-assign ./src/styles/tailwind.js -o ./src/styles/tailwind-babel.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
