Added Test page with new design

--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "d3-ease": "^1.0.3",
-    "gatsby": "^1.9.204",
-    "gatsby-cli": "^1.1.41",
-    "gatsby-image": "^1.0.38",
-    "gatsby-link": "^1.6.37",
-    "gatsby-plugin-netlify": "^1.0.18",
-    "gatsby-plugin-preact": "^1.0.16",
-    "gatsby-plugin-react-helmet": "^2.0.5",
-    "gatsby-plugin-react-next": "^1.0.9",
-    "gatsby-plugin-sharp": "^1.6.31",
-    "gatsby-source-filesystem": "^1.5.21",
-    "gatsby-transformer-json": "^1.0.15",
-    "gatsby-transformer-sharp": "^1.6.20",
+    "gatsby": "^1.9.221",
+    "gatsby-cli": "^1.1.45",
+    "gatsby-image": "^1.0.40",
+    "gatsby-link": "^1.6.38",
+    "gatsby-plugin-netlify": "^1.0.19",
+    "gatsby-plugin-preact": "^1.0.17",
+    "gatsby-plugin-react-helmet": "^2.0.6",
+    "gatsby-plugin-react-next": "^1.0.10",
+    "gatsby-plugin-sharp": "^1.6.37",
+    "gatsby-source-filesystem": "^1.5.25",
+    "gatsby-transformer-json": "^1.0.16",
+    "gatsby-transformer-sharp": "^1.6.22",
     "isotope-layout": "^3.0.5",
+    "loadjs": "^3.5.2",
     "object-fit-images": "^3.2.3",
     "react-aux": "^1.1.0",
     "react-helmet": "^5.2.0",
@@ -27,17 +28,18 @@
     "react-move": "^2.7.0",
     "react-scroll": "^1.7.7",
     "react-simple-chatbot": "^0.2.9",
-    "react-slick": "^0.18.1",
+    "react-slick": "^0.19.0",
     "react-waypoint": "^8.0.0",
     "scrollreveal": "^3.3.6",
     "shortid": "^2.2.8",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^0.4.1"
+    "tailwindcss": "^0.4.2",
+    "what-input": "^5.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
     "postcss-cli": "^5.0.0",
-    "precss": "^3.1.0",
+    "precss": "^3.1.2",
     "purgecss": "^0.20.0"
   },
   "scripts": {
