Update Anna Bolena image

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -16,8 +16,8 @@
     "link": "https://www.adriannepieczonka.com"
   },
   {
-    "image": "../images/opera/anna-bolena-rochefort.jpg",
-    "alt": "\"Henry VIII and the Barber Surgeons\" by Hans Holbein the Younger, 1543.",
+    "image": "../images/opera/anna-bolena.jpg",
+    "alt": "\"Henry VIII's first interview with Anne Boleyn\" by D. MacLise, 1835.",
     "title": "Anna Bolena",
     "category": "Opera",
     "tags": ["Canadian Opera Company"],
