--- a/package.json
+++ b/package.json
@@ -1,43 +1,36 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "michael-uloth-website",
+  "description": "Official website of Michael Uloth, an opera singer and web developer based in Toronto.",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Michael Uloth <hello@michaeluloth.com>",
   "dependencies": {
-    "d3-ease": "^1.0.3",
-    "gatsby": "^1.9.221",
+    "gatsby": "^1.9.223",
     "gatsby-cli": "^1.1.45",
-    "gatsby-image": "^1.0.40",
+    "gatsby-image": "^1.0.41",
     "gatsby-link": "^1.6.38",
     "gatsby-plugin-netlify": "^1.0.19",
     "gatsby-plugin-preact": "^1.0.17",
     "gatsby-plugin-react-helmet": "^2.0.6",
-    "gatsby-plugin-react-next": "^1.0.10",
-    "gatsby-plugin-sharp": "^1.6.37",
-    "gatsby-source-filesystem": "^1.5.25",
+    "gatsby-plugin-sharp": "^1.6.39",
+    "gatsby-source-filesystem": "^1.5.26",
     "gatsby-transformer-json": "^1.0.16",
     "gatsby-transformer-sharp": "^1.6.22",
-    "isotope-layout": "^3.0.5",
     "loadjs": "^3.5.2",
     "object-fit-images": "^3.2.3",
-    "react-aux": "^1.1.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
-    "react-id-swiper": "^1.6.1",
-    "react-inlinesvg": "^0.7.5",
-    "react-move": "^2.7.0",
-    "react-scroll": "^1.7.7",
-    "react-simple-chatbot": "^0.2.9",
-    "react-slick": "^0.19.0",
-    "react-waypoint": "^8.0.0",
-    "scrollreveal": "^3.3.6",
+    "react-slick": "^0.20.0",
+    "react-waypoint": "^8.0.1",
     "shortid": "^2.2.8",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^0.4.2",
+    "tailwindcss": "^0.4.3",
     "what-input": "^5.0.5"
   },
   "devDependencies": {
-    "autoprefixer": "^8.0.0",
+    "autoprefixer": "^8.1.0",
+    "gatsby-plugin-accessibilityjs": "^1.0.2",
+    "gatsby-plugin-sitemap": "^1.2.14",
+    "gatsby-plugin-webpack-bundle-analyzer": "^0.1.1",
     "postcss-cli": "^5.0.0",
     "precss": "^3.1.2",
     "purgecss": "^0.20.0"
