--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-transformer-sharp": "^1.6.22",
     "loadjs": "^3.5.2",
     "object-fit-images": "^3.2.3",
+    "prange": "^0.2.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
     "react-slick": "^0.20.0",
