--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
   "name": "michael-uloth-website",
-  "description":
-    "Official website of Michael Uloth, an opera singer and web developer based in Toronto.",
+  "description": "Official website of Michael Uloth, an opera singer and web developer based in Toronto.",
   "version": "1.0.0",
   "author": "Michael Uloth <hello@michaeluloth.com>",
-  "browserslist": [">0.25%", "not ie < 11", "not op_mini all"],
+  "browserslist": [
+    ">0.25%",
+    "not ie < 11",
+    "not op_mini all"
+  ],
   "dependencies": {
-    "gatsby": "^1.9.248",
-    "gatsby-cli": "^1.1.50",
-    "gatsby-image": "^1.0.45",
-    "gatsby-link": "^1.6.40",
+    "gatsby": "^1.9.255",
+    "gatsby-cli": "^1.1.51",
+    "gatsby-image": "^1.0.47",
+    "gatsby-link": "^1.6.41",
     "gatsby-plugin-netlify": "^1.0.19",
-    "gatsby-plugin-react-helmet": "^2.0.10",
+    "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sharp": "^1.6.42",
-    "gatsby-source-filesystem": "^1.5.29",
+    "gatsby-plugin-sharp": "^1.6.43",
+    "gatsby-source-filesystem": "^1.5.34",
     "gatsby-transformer-json": "^1.0.16",
-    "gatsby-transformer-sharp": "^1.6.22",
+    "gatsby-transformer-sharp": "^1.6.23",
     "loadjs": "^3.5.4",
     "object-fit-images": "^3.2.3",
     "prange": "^0.2.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
+    "react-rellax": "^1.0.0",
+    "react-transition-group": "^2.3.1",
     "react-waypoint": "^8.0.1",
     "shortid": "^2.2.8",
     "slick-carousel": "^1.8.1",
@@ -29,7 +34,7 @@
     "what-input": "^5.0.5"
   },
   "devDependencies": {
-    "autoprefixer": "^8.2.0",
+    "autoprefixer": "^8.3.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
     "gatsby-plugin-accessibilityjs": "^1.0.3",
     "gatsby-plugin-sitemap": "^1.2.20",
@@ -39,10 +44,8 @@
     "purgecss": "^0.21.0"
   },
   "scripts": {
-    "watch:postcss":
-      "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
-    "build:postcss":
-      "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css",
+    "watch:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
+    "build:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css",
     "build:purgecss": "purgecss -c ./purgecss.config.js -o src/styles/builds/after-purgecss",
     "dev": "gatsby develop & npm run watch:postcss",
     "build": "npm run build:postcss && npm run build:purgecss && gatsby build --noUglify"
