Add eslint and stylelint and make minor refactoring changes

--- a/package.json
+++ b/package.json
@@ -26,23 +26,27 @@
     "prange": "^0.2.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
-    "react-rellax": "^1.0.0",
     "react-transition-group": "^2.3.1",
     "react-waypoint": "^8.0.1",
-    "shortid": "^2.2.8",
-    "slick-carousel": "^1.8.1",
     "tailwindcss": "^0.5.2",
     "what-input": "^5.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^8.3.0",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
-    "gatsby-plugin-accessibilityjs": "^1.0.3",
+    "eslint": "^4.19.1",
+    "eslint-plugin-compat": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "gatsby-plugin-sitemap": "^1.2.20",
     "gatsby-plugin-webpack-bundle-analyzer": "^0.1.1",
     "postcss-cli": "^5.0.0",
     "precss": "^3.1.2",
-    "purgecss": "^0.21.0"
+    "purgecss": "^0.21.0",
+    "stylelint": "^9.2.0",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.0"
   },
   "scripts": {
     "watch:postcss": "postcss src/styles/index.css -o src/styles/builds/after-postcss/output.css -w",
