--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-cli": "^1.1.51",
     "gatsby-image": "^1.0.47",
     "gatsby-link": "^1.6.41",
+    "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-hotjar": "^1.0.1",
     "gatsby-plugin-netlify": "^1.0.19",
     "gatsby-plugin-react-helmet": "^2.0.11",
