--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-source-filesystem": "^1.5.34",
     "gatsby-transformer-json": "^1.0.16",
     "gatsby-transformer-sharp": "^1.6.23",
+    "gatsby-transformer-yaml": "^1.5.17",
     "intersection-observer": "^0.5.0",
     "loadjs": "^3.5.4",
     "object-fit-images": "^3.2.3",
