--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "object-fit-images": "^3.2.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
+    "react-inlinesvg": "^0.8.1",
     "react-transition-group": "^2.3.1",
     "react-waypoint": "^8.0.1",
     "tailwindcss": "^0.5.2",
